Agregado contenido adicional al blog y cambio de tipografía

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,8 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p> Y este es el parrafo de inicio donde vamos a explicar ...</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas.....</p>
+  
             </div>
         </div>
     </body>
