--- a/blogpost.html
+++ b/blogpost.html
@@ -14,11 +14,12 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas.</p>
+                <p> <img id="foto" src="imagenes/img.jpg"/></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a conferencias o
                     salir en YouTube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... por ahora.</p>
                 <p>Suscr&iacute;bete y dale like.</p>
             <div id="footer">
-                Hecho con amor en Platzi.
+               Curso hecho en Platzi.
             </div>
         </div>
     </body>
